fixed the spacing in the about section

--- a/css/index.css
+++ b/css/index.css
@@ -209,4 +209,9 @@ nav a {
     background-color: dodgerblue; 
 }
 
+.about{
+    padding: 0px 20px 20px 20px;  
+    font-weight: bold; 
+}
+
 
